# target-tracking-toolbox

./: .gitignore  README.md  startup.m
configs/extended/: extended_phd_default.json  ggiw_default.json  ggiw_pmbm_smoothing_default.json  pmbm_default.json  starconvex_default.json
configs/learning/: python_placeholder.json
configs/multi/: cd_phd_default.json  glmb_gms_default.json  lmb_gms_default.json  phd_default.json  pmbm_default.json  tpmbm_default.json
configs/single/: dbt_default.json  tbd_default.json
docs/: architecture.md  coding-style.md  migration-map.md  third-party-sources.md
docs/algorithms/: deep-learning.md  extended-target.md  multi-target.md  single-target.md
examples/matlab/: demo_all.m  demo_extended_ggiw.m  demo_extended_phd.m  demo_extended_pmbm.m  demo_extended_pmbm_smoothing.m  demo_extended_starconvex.m  demo_multi_filter_comparison.m  demo_multi_labeled_rfs.m  demo_multi_phd.m  demo_multi_rfs_filters.m  demo_single_dbt.m  demo_single_maneuver.m  demo_single_tbd.m
python/: pyproject.toml
python/src/target_tracking_dl/: __init__.py  adapter.py
tests/matlab/: runAllTests.m
tests/matlab/integration/: test_extended_target_all.m
tests/matlab/regression/: TestAlgorithmNumericalRegression.m  runRegressionTests.m
tests/matlab/unit/: TestDbtFilters.m  TestExtendedAdapters.m  TestExtendedPmbmFilters.m  TestLabeledRfsFilters.m  TestManeuverTracking.m  TestMultiAssociationMetrics.m  TestMultiPackageStructure.m  TestMultiRfsFilters.m  TestPackageStructure.m  TestPhdFilter.m  TestTbdAlgorithms.m  (+2 more)
tests/python/: test_adapter.py
(+105 files in other folders)
