[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "target-tracking-dl"
version = "0.1.0"
description = "Python deep-learning adapters for Target Tracking Toolbox"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
